exports[`Active`] = `
<select
  className="a"
  disabled={false}
  onChange={[Function]}>
  <option
    className="a"
    value="España">
    España
  </option>
  <option
    className="a"
    value="Francia">
    Francia
  </option>
  <option
    className="a"
    value="Portugal">
    Portugal
  </option>
</select>
`;

exports[`Disabled`] = `
<select
  className="a"
  disabled={true}
  onChange={[Function]}>
  <option
    className="a"
    value="España">
    España
  </option>
  <option
    className="a"
    value="Francia">
    Francia
  </option>
  <option
    className="a"
    value="Portugal">
    Portugal
  </option>
</select>
`;
